implement provider update + auth
